#9 #19 hover zoom. Content for consulting. Fix url encode for subject.

--- a/src/Hosted/consulting.html
+++ b/src/Hosted/consulting.html
@@ -44,7 +44,7 @@
 					<div class="col-lg-3">
 						<h2>Why IntelliFactory</h2>
 						<p>
-							We believe in top level of service and big vision in our development. As a top F# development agency we provide best products our clients.
+							We believe in top level of service and big vision in our development. As a top F# development agency we provide the best products to our clients.
 						</p>
 					</div>
 					<div class="col-lg-3">
@@ -88,7 +88,7 @@
 					<div class="col-lg-3">
 						<h2>Our products</h2>
 						<p>
-							We have created best tools out there with F# programming to help you to create your application.
+							We have created best tools out there with F# programming to help you to achieve your dreams.
 						</p>
 					</div>
 					<div class="col-lg-9 grid-list" data-columns="3">
@@ -98,7 +98,7 @@
 								<div class="align-center">
 									<h2>WebSharper</h2>
 									<p style="margin-top: 0;">
-										One of our best products.
+										To leverage JavaScript ecosystem
 									</p>
 								</div>
 							</div>
@@ -107,7 +107,7 @@
 								<div class="align-center">
 									<h2>Bolero</h2>
 									<p style="margin-top: 0;">
-										Another one of our products
+										Advance to the future of WebAssembly
 									</p>
 								</div>
 							</div>
@@ -116,7 +116,7 @@
 								<div class="align-center">
 									<h2>CloudSharper</h2>
 									<p style="margin-top: 0;">
-										Our latest product.
+										Your environment. Everywhere.
 									</p>
 								</div>
 							</div>
@@ -126,7 +126,7 @@
 
 			</div>
 		</section>
-		<section class="section-base">
+		<section class="section-base section-color">
 			<div class="container">
 				<div class="timeline">
 					<div>
@@ -143,14 +143,14 @@
 						<div class="panel">
 							<h3 class="timeline-title">Business value created</h3>
 							<p>
-								We try to create value which our customers and partners remember us with.
+								We create value which our customers and partners remember us with.
 							</p>
 						</div>
 					</div>
 					<div>
 						<div class="badge"><p>TTM</p><span></span></div>
 						<div class="panel">
-							<h3 class="timeline-title">Shorter TTM</h3>
+							<h3 class="timeline-title">Shorter Time To Market</h3>
 							<p>
 								Our motto: Ready, set, present. We try to keep time from idea to market to minimum.
 							</p>
@@ -158,6 +158,35 @@
 					</div>
 				</div>
 			</div>
+		</section>
+
+		<section class="section-base">
+			<div class="container">
+        <div class="row">
+          <div class="col-lg-6 cnt-box cnt-box-top zoom-on-hover">
+            <img src="assets/trainings-2.jpg" alt="" />
+            <div class="caption">
+              <h2>Onsite Consulting</h2>
+              <ul>
+                <li>Harness transitioning to functional mindset</li>
+                <li>Enjoy the gains of frictionless partnerships</li>
+                <li>Experts at hand</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-6 cnt-box cnt-box-top zoom-on-hover">
+            <img src="assets/trainings-3.jpg" alt="" />
+            <div class="caption">
+              <h2>Online Consulting</h2>
+              <ul>
+                <li>When recorded meetings matter</li>
+                <li>Seamless connection with distant partners</li>
+                <li>Available at lockdown</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
 		</section>
 	</main>
 	<!-- FOOTER -->
