--- a/src/Hosted/trainings/fsharp-basics.html
+++ b/src/Hosted/trainings/fsharp-basics.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>F# Web Developer</title>
+    <title>F# basics training</title>
     <meta name="description" content="" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -48,7 +48,7 @@
               <br/>
               <p>With us, you can quickly learn to use F# in real-world, complex projects.</p>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 zoom-on-hover">
               <img
                 style="display: block; margin: 0 auto"
                 src="/assets/fsharp-training-1.jpg"
@@ -60,7 +60,7 @@
       <section class="section-base section-color">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 zoom-on-hover">
               <img
                 class="margin-23 margin-md-23"
                 src="/assets/003.jpg"
