#10 Added FAQ for individual open job position pages

--- a/src/Hosted/careers.html
+++ b/src/Hosted/careers.html
@@ -11,15 +11,15 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <script src="themekit/scripts/jquery.min.js"></script>
-    <script src="themekit/scripts/main.js"></script>
-    <link rel="stylesheet" href="themekit/css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="themekit/css/style.min.css" />
-    <link rel="stylesheet" href="themekit/css/magnific-popup.min.css" />
-    <link rel="stylesheet" href="themekit/css/contact-form.min.css" />
-    <link rel="stylesheet" href="assets/skin.min.css" />
-    <link rel="stylesheet" href="assets/custom.min.css" />
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <script src="/themekit/scripts/jquery.min.js"></script>
+    <script src="/themekit/scripts/main.js"></script>
+    <link rel="stylesheet" href="/themekit/css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="/themekit/css/style.min.css" />
+    <link rel="stylesheet" href="/themekit/css/magnific-popup.min.css" />
+    <link rel="stylesheet" href="/themekit/css/contact-form.min.css" />
+    <link rel="stylesheet" href="/assets/skin.min.css" />
+    <link rel="stylesheet" href="/assets/custom.min.css" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <script ws-replace="Head"></script>
   </head>
   <body>
@@ -57,7 +57,7 @@
               >
                 <div class="grid-box">
                   <div class="grid-item">
-                    <img src="assets/careers-1.jpg" />
+                    <img src="/assets/careers-1.jpg" />
                   </div>
                 </div>
               </div>
@@ -100,7 +100,7 @@
                 <div class="col-lg-6">
                   <img
                     class="margin-23 margin-md-23"
-                    src="assets/classroom.jpg"
+                    src="/assets/classroom.jpg"
                   />
                 </div>
                 <div class="col-lg-6">
@@ -134,7 +134,7 @@
                 <div class="col-lg-6">
                   <img
                     class="margin-23 margin-md-23"
-                    src="assets/open-day.jpg"
+                    src="/assets/open-day.jpg"
                   />
                 </div>
               </div>
@@ -147,7 +147,7 @@
                 <div class="col-lg-6">
                   <img
                     class="margin-23 margin-md-23"
-                    src="assets/careers-2.png"
+                    src="/assets/careers-2.png"
                   />
                 </div>
                 <div class="col-lg-6">
@@ -385,16 +385,16 @@
         rel="stylesheet"
         href="/themekit/media/icons/fontawesome/icons.css"
       />
-      <script src="themekit/scripts/contact-form/contact-form.js"></script>
-      <script src="themekit/scripts/tab-accordion.js"></script>
-      <script src="themekit/scripts/maps.min.js"></script>
-      <script src="themekit/scripts/contact-form/contact-form.js"></script>
-      <script src="themekit/scripts/progress.js"></script>
-      <script src="themekit/scripts/glide.min.js"></script>
-      <script src="themekit/scripts/magnific-popup.min.js"></script>
-      <script src="themekit/scripts/imagesloaded.min.js"></script>
-      <script src="themekit/scripts/parallax.min.js"></script>
-      <script src="media/custom.js"></script>
+      <script src="/themekit/scripts/contact-form/contact-form.js"></script>
+      <script src="/themekit/scripts/tab-accordion.js"></script>
+      <script src="/themekit/scripts/maps.min.js"></script>
+      <script src="/themekit/scripts/contact-form/contact-form.js"></script>
+      <script src="/themekit/scripts/progress.js"></script>
+      <script src="/themekit/scripts/glide.min.js"></script>
+      <script src="/themekit/scripts/magnific-popup.min.js"></script>
+      <script src="/themekit/scripts/imagesloaded.min.js"></script>
+      <script src="/themekit/scripts/parallax.min.js"></script>
+      <script src="/media/custom.js"></script>
       <script src="/js/Client${ReleaseMin}.js"></script>
     </footer>
     <script ws-replace="scripts"></script>
