--- a/src/Hosted/jobs/202102-fsharp-intern.html
+++ b/src/Hosted/jobs/202102-fsharp-intern.html
@@ -115,6 +115,66 @@
                   </tr>
                 </tbody>
               </table>
+              <hr class="space-lg" />
+              <h2 class="align-center">Frequently Asked Questions</h2>
+              <hr class="space-sm" />
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul class="accordion-list">
+                    <li>
+                      <a href="#"
+                        >Should I still apply even though I have less than
+                        required experience?</a
+                      >
+                      <div class="content">
+                        <p>
+                          You should definetely send us your CV. It might turn
+                          out that you have actually learned more in a year than
+                          people usually learn in 2 years.
+                        </p>
+                      </div>
+                    </li>
+                    <li>
+                      <a href="#"
+                        >How can I be part of your team if there is no open
+                        position matching my skill set?</a
+                      >
+                      <div class="content">
+                        <p>
+                          Create a project you would be proud to show others
+                          using your skill set and send it to us alongside your
+                          CV. We are always looking for talented developers.
+                        </p>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-lg-6" style="margin-top: 0">
+                  <ul class="accordion-list">
+                    <li>
+                      <a href="#">Do you require a university degree?</a>
+                      <div class="content">
+                        <p>
+                          No, we believe imagination is more important the
+                          knowledge.
+                        </p>
+                      </div>
+                    </li>
+                    <li>
+                      <a href="#"
+                        >Will there be mentoring for junior developers?</a
+                      >
+                      <div class="content">
+                        <p>
+                          Our senior developers are the most friendly people
+                          ever. We believe there is no silly questions. You can
+                          ask about anything you would like to know.
+                        </p>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
             <div class="col-lg-3">
               <div ws-replace="ApplySteps"></div>
