#19 #9 - Links to the main IntelliFactory tools. li links into snippets.

--- a/src/Hosted/consulting.html
+++ b/src/Hosted/consulting.html
@@ -94,27 +94,39 @@
 					<div class="col-lg-9 grid-list" data-columns="3">
 						<div class="grid-box">
 							<div class="grid-item">
-								<img src="assets/consulting-6.jpg" alt="WebSharper" />
+								<a href="https://websharper.com/">
+                  <img src="assets/consulting-6.jpg" alt="WebSharper" />
+                </a>
 								<div class="align-center">
-									<h2>WebSharper</h2>
+                  <a href="https://websharper.com/">
+                    <h2>WebSharper</h2>
+                  </a>
 									<p style="margin-top: 0;">
 										To leverage JavaScript ecosystem
 									</p>
 								</div>
 							</div>
 							<div class="grid-item">
-								<img src="assets/consulting-7.jpg" alt="Bolero" />
+                <a href="https://fsbolero.io/">
+                  <img src="assets/consulting-7.jpg" alt="Bolero" />
+                </a>
 								<div class="align-center">
-									<h2>Bolero</h2>
+                  <a href="https://fsbolero.io/">
+                    <h2>Bolero</h2>
+                  </a>
 									<p style="margin-top: 0;">
 										Advance to the future of WebAssembly
 									</p>
 								</div>
 							</div>
 							<div class="grid-item">
-								<img src="assets/consulting-8.jpg" alt="CloudSharper" />
+                <a href="http://cloudsharper.com/">
+                  <img src="assets/consulting-8.jpg" alt="CloudSharper" />
+                </a>
 								<div class="align-center">
-									<h2>CloudSharper</h2>
+                  <a href="http://cloudsharper.com/">
+                    <h2>CloudSharper</h2>
+                  </a>
 									<p style="margin-top: 0;">
 										Your environment. Everywhere.
 									</p>
