--- a/src/Hosted/trainings/fsharp-basics.html
+++ b/src/Hosted/trainings/fsharp-basics.html
@@ -87,7 +87,8 @@
             <h1>What we offer to train</h1>
           </div>
           <hr class="space-xs" />
-          <div ws-replace="VideoList"></div>
+          <ul class="accordion-list" ws-hole="VideoList">
+          </ul>
         </div>
       </section>
     </main>
