--- a/src/Hosted/blogpost.html
+++ b/src/Hosted/blogpost.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/themekit/css/content-box.min.css">
   <link rel="stylesheet" href="/themekit/css/media-box.min.css">
   <link rel="stylesheet" href="/themekit/css/social.min.css">
+  <link rel="stylesheet" href="/themekit/css/contact-form.min.css">
   <link rel="stylesheet" href="/assets/skin.min.css">
   <link rel="stylesheet" href="/assets/custom.min.css">
   <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
@@ -24,14 +25,13 @@
     <nav class="menu-wide ${IsTransparentHeader} light menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
         <div ws-replace="Menubar"></div>
     </nav>
-    <header class="header-image ken-burn-center align-center light boxed-page-header" data-parallax="true" data-natural-height="600" data-natural-width="1920" data-bleed="0" data-image-src="http://via.placeholder.com/1920x700" data-offset="0">
+    <header class="header-image ken-burn-center align-center light boxed-page-header" data-parallax="true" data-natural-height="600" data-natural-width="1920" data-bleed="0" data-image-src="/assets/category${CategoryNo}.jpg" data-offset="0">
         <div class="container">
             <h1>${Title}</h1>
-            <h2>${Date}</h2>
             <ol class="breadcrumb">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/blogs">Blogs</a></li>
+                <li><a href="${AuthorUrl}">${Author}</a></li>
             </ol>
         </div>
     </header>
@@ -40,19 +40,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-9 text-color">
-                        <div ws-hole="Article"></div>
-                        <hr class="space" />
-                        <div class="row">
-                            <div class="col-lg-8">
-                                <ul class="icon-list icon-list-horizontal icon-list-blog">
-                                    <li>
-                                        <i class="icon-bookmark"></i>
-                                        <a href="#">Finance</a>,
-                                        <a href="#">Software</a>
-                                    </li>
-                                </ul>
-                            </div>
+                        <div class="blog-meta-icon">
+                            <div><i class="fas fa-calendar-alt"></i><span class="blog-meta-date">${Date}</span></div>
+                            <div><i class="fas fa-user-alt"></i><a href="#author">Adam Granicz</a></div>
                         </div>
+                        <div ws-hole="Article"></div>
                         <hr class="space" />
                         <div class="icon-links icon-links-button full-width icon-social social-colors">
                             <a data-social="share-facebook" class="facebook"><i class="fab fa-facebook"></i></a>
@@ -71,7 +63,7 @@
                             </div>
                         </div>
                         <hr />
-                        <h2>Related articles.</h2>
+                        <h2>Other articles you might be interested in</h2>
                         <hr class="space-sm" />
                         <div class="grid-list" data-columns="3" data-columns-sm="1">
                             <div class="grid-box">
@@ -101,70 +93,39 @@
                         </div>
                     </div>
                     <div class="col-lg-3 widget">
-                        <div ws-hole="Sidebar"></div>
-                        <h3>Categories</h3>
-                        <hr class="space-xs" />
-                        <div class="tabs">
-                            <div>
-                                <a href="#">
-                                    Finance and money
-                                </a>
-                            </div>
-                            <div>
-                                <a href="#">
-                                    Software
-                                </a>
-                            </div>
-                            <div>
-                                <a href="#">
-                                    Technology
-                                </a>
-                            </div>
-                            <div>
-                                <a href="#">
-                                    Business
-                                </a>
-                            </div>
+                        <div ws-replace="LanguageSelectorPlaceholder" ws-template="LanguageSelector" class="navbar-end">
                         </div>
-                        <hr class="space-sm" />
-                        <h3>Latest posts</h3>
-                        <hr class="space-sm" />
-                        <div class="menu-inner menu-inner-vertical menu-inner-image">
-                            <ul>
-                                <li>
-                                    <a href="#">
-                                        <img src="//via.placeholder.com/400x400" alt="" />
-                                        Shipping family turned money become billionare
-                                        <span>February 12, 2020</span>
+                        <div ws-hole="Sidebar" ws-children-template="SidebarTemplate">
+                            <h3>Tagged as</h3>
+                            <hr class="space-xs" />
+                            <div class="tabs" ws-hole="Categories">
+                              <div ws-template="Category">
+                                <a href="${Url}">
+                                  ${Name}
+                                </a>
+                              </div>
+                            </div>
+                            <h3>Latest posts</h3>
+                            <hr class="space-sm" />
+                            <div ws-replace="ArticleItems">
+                              <div ws-template="ArticleItems" class="menu-inner menu-inner-vertical menu-inner-image">
+                                <ul>
+                                  <div ws-replace="ArticleItems"></div>
+                                  <li ws-template="ArticleItem">
+                                    <a href="${Url}">
+                                      <img src="/assets/category${CategoryNo}-thumb.jpg" alt="${Title}">
+                                      ${Title}
+                                      <span>${Date}</span>
                                     </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <img src="//via.placeholder.com/400x400" alt="" />
-                                        Six best practices for using artificial intelligence data
-                                        <span>February 25, 2020</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <img src="//via.placeholder.com/400x400" alt="" />
-                                        Machine learning and AI are raising concerns
-                                        <span>April 19, 2020</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <img src="//via.placeholder.com/400x400" alt="" />
-                                        Commodity traders turn to long as big oil fail more then expected
-                                        <span>April 20, 2020</span>
-                                    </a>
-                                </li>
-                            </ul>
+                                  </li>
+                                </ul>
+                              </div>
+                            </div>
+                            <hr class="space-sm" />
+                            <h3>Twitter</h3>
+                            <hr class="space-sm" />
+                            <div class="social-feed social-feed-tw social-slider" data-social-id="twitter" data-options="count:8,arrows:true,nav:true,controls:out,type:carousel,perView:1"></div>
                         </div>
-                        <hr class="space-sm" />
-                        <h3>Twitter</h3>
-                        <hr class="space-sm" />
-                        <div class="social-feed social-feed-tw social-slider" data-social-id="twitter" data-options="count:8,arrows:true,nav:true,controls:out,type:carousel,perView:1"></div>
                     </div>
                 </div>
             </div>
@@ -172,80 +133,7 @@
     </main>
     <i class="scroll-top-btn scroll-top show"></i>
     <footer class="footer light">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <h4>Company and team</h4>
-                    <div class="menu-inner menu-inner-vertical">
-                        <ul>
-                            <li>
-                                <a href="#">Company details and team</a>
-                            </li>
-                            <li>
-                                <a href="#">News and blog</a>
-                            </li>
-                            <li>
-                                <a href="#">Press area</a>
-                            </li>
-                            <li>
-                                <a href="#">Affiliates and marketing</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <h4>Help and support</h4>
-                    <div class="menu-inner menu-inner-vertical">
-                        <ul>
-                            <li>
-                                <a href="#">Help centre</a>
-                            </li>
-                            <li>
-                                <a href="#">Feedbacks</a>
-                            </li>
-                            <li>
-                                <a href="#">Request new features</a>
-                            </li>
-                            <li>
-                                <a href="#">Contact us</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <h4>Learn more</h4>
-                    <div class="menu-inner menu-inner-vertical">
-                        <ul>
-                            <li>
-                                <a href="#">Apps stores</a>
-                            </li>
-                            <li>
-                                <a href="#">Partners</a>
-                            </li>
-                            <li>
-                                <a href="#">Privacy and terms</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <h4>Follow us</h4>
-                    <div class="icon-links icon-social icon-links-grid social-colors">
-                        <a class="facebook"><i class="icon-facebook"></i></a>
-                        <a class="twitter"><i class="icon-twitter"></i></a>
-                        <a class="linkedin"><i class="icon-linkedin"></i></a>
-                        <a class="youtube"><i class="icon-youtube"></i></a>
-                        <a class="instagram"><i class="icon-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bar">
-            <div class="container">
-                <span>© Codrop LTD 2019. Codrop is a powerful Landing Page App Template built with <a target="_blank" href="https://themekit.dev/code/">Themekit</a> by the <a target="_blank" href="https://schiocco.com/">Schiocco</a> Team. </span>
-                <span><img src="/media/logo-light.svg" /></span>
-            </div>
-        </div>
+        <div ws-replace="FooterPlaceholder"></div>
         <div class="bottom" ws-replace="Cookie"></div>
         <link async rel="stylesheet" href="/themekit/media/icons/fontawesome/icons.css">
         <script src="/themekit/scripts/parallax.min.js"></script>
@@ -254,6 +142,10 @@
         <script src="/themekit/scripts/social.min.js"></script>
         <script src="/themekit/scripts/tab-accordion.js"></script>
         <script src="/media/custom.js"></script>
+        <script src="/js/Client${ReleaseMin}.js"></script>
+        <script ws-replace="scripts"></script>
+        <script src="//unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+        <script src="//unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     </footer>
 </body>
 </html>
