#9 - full path for assets. Try to use progress.js. Use themekit zoom in solution. Add repos + full-stack apps counters. Add links to contact page on consulting.

--- a/src/Hosted/consulting.html
+++ b/src/Hosted/consulting.html
@@ -1,33 +1,36 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Consulting</title>
-    <meta name="description" content="" />
-    <script src="themekit/scripts/jquery.min.js"></script>
-    <script src="themekit/scripts/main.js"></script>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Consulting</title>
+	<meta name="description" content="" />
+	<script src="/themekit/scripts/jquery.min.js"></script>
+	<script src="/themekit/scripts/main.js"></script>
+  <script src="/themekit/scripts/progress.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="themekit/css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="themekit/css/style.min.css" />
-    <link rel="stylesheet" href="themekit/css/glide.min.css" />
-    <link rel="stylesheet" href="themekit/css/content-box.min.css" />
-    <link rel="stylesheet" href="themekit/css/social.min.css" />
-    <link rel="stylesheet" href="themekit/css/contact-form.min.css" />
-    <link rel='stylesheet' href="themekit/css/magnific-popup.min.css">
-    <link rel="stylesheet" href="assets/skin.min.css" />
-    <link rel="stylesheet" href="assets/custom.min.css" />
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
-    <script ws-replace="Head"></script>
+	<link rel="stylesheet" href="/themekit/css/bootstrap-grid.min.css" />
+	<link rel="stylesheet" href="/themekit/css/style.min.css" />
+	<link rel="stylesheet" href="/themekit/css/glide.min.css" />
+	<link rel="stylesheet" href="/themekit/css/content-box.min.css" />
+	<link rel="stylesheet" href="/themekit/css/social.min.css" />
+	<link rel="stylesheet" href="/themekit/css/contact-form.min.css" />
+	<link rel='stylesheet' href="/themekit/css/magnific-popup.min.css">
+	<link rel="stylesheet" href="/assets/skin.min.css" />
+	<link rel="stylesheet" href="/assets/custom.min.css" />
+	<link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
+	<script ws-replace="Head"></script>
 </head>
 <body>
 	<div id="preloader"></div>
+
 	<!-- NAVIGATION MENU -->
 	<nav class="menu-wide menu-transparent dark menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
 		<div ws-replace="MenuBar"></div>
 	</nav>
+
 	<!-- HEADER -->
 	<header class="header-image ken-burn-center light" data-parallax="true" data-natural-height="966" data-natural-width="1450" data-bleed="0" data-image-src="assets\consulting-1.jpg" data-offset="0">
 		<div class="container">
@@ -35,6 +38,7 @@
 			<h2>By weaving together advances in F# development, intelligent operations, and modern full-stack applications, we can help your company deliver on the promise of digital transformation</h2>
 		</div>
 	</header>
+
 	<!-- MAIN CONTENT -->
 	<main>
 		<!-- SECTIONS -->
@@ -57,23 +61,23 @@
 						<div class="grid-list list-gallery grid-wall-1" data-lightbox-anima="fade-top" data-columns="2">
 							<div class="grid-box">
 								<div class="grid-item">
-									<a class="img-box" href="assets/consulting-2.jpg">
-										<img src="assets/consulting-2-thumbnail.jpg">
+									<a class="img-box" href="/assets/consulting-2.jpg">
+										<img src="/assets/consulting-2-thumbnail.jpg">
 									</a>
 								</div>
 								<div class="grid-item">
-									<a class="img-box" href="assets/consulting-3.jpg">
-										<img src="assets/consulting-3-thumbnail.jpg">
+									<a class="img-box" href="/assets/consulting-3.jpg">
+										<img src="/assets/consulting-3-thumbnail.jpg">
 									</a>
 								</div>
 								<div class="grid-item">
-									<a class="img-box" href="assets/consulting-4.jpg">
-										<img src="assets/consulting-4-thumbnail.jpg">
+									<a class="img-box" href="/assets/consulting-4.jpg">
+										<img src="/assets/consulting-4-thumbnail.jpg">
 									</a>
 								</div>
 								<div class="grid-item">
-									<a class="img-box" href="assets/consulting-5.jpg">
-										<img src="assets/consulting-5-thumbnail.jpg">
+									<a class="img-box" href="/assets/consulting-5.jpg">
+										<img src="/assets/consulting-5-thumbnail.jpg">
 									</a>
 								</div>
 							</div>
@@ -82,6 +86,41 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="align-center">
+			<div class="container">
+        <h2>Our achivements.</h2>
+        <p class="width-650">
+          We are a factor in the F# community that roles with the latest tech for 15+ years.
+        </p>
+        <hr class="space">
+        <div class="row">
+          <div class="col-lg-5">
+            <div class="counter">
+              <div>
+                <h3>F# source repositories</h3>
+                <div class="value text-lg">
+                  <span data-to="400" data-speed="3000" data-trigger="null">400</span>
+                  <span>+</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-5">
+            <div class="counter">
+              <div>
+                <h3>Full-stack F# enterprise applications built</h3>
+                <div class="value text-lg">
+                  <span data-to="30" data-speed="3000" data-trigger="null">30</span>
+                  <span>+</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+		</section>
+
 		<section class="section-base">
 			<div class="container">
 				<div class="row">
@@ -95,7 +134,7 @@
 						<div class="grid-box">
 							<div class="grid-item">
 								<a href="https://websharper.com/">
-                  <img src="assets/consulting-6.jpg" alt="WebSharper" />
+                  <img src="/assets/consulting-6.jpg" alt="WebSharper" />
                 </a>
 								<div class="align-center">
                   <a href="https://websharper.com/">
@@ -108,7 +147,7 @@
 							</div>
 							<div class="grid-item">
                 <a href="https://fsbolero.io/">
-                  <img src="assets/consulting-7.jpg" alt="Bolero" />
+                  <img src="/assets/consulting-7.jpg" alt="Bolero" />
                 </a>
 								<div class="align-center">
                   <a href="https://fsbolero.io/">
@@ -121,7 +160,7 @@
 							</div>
 							<div class="grid-item">
                 <a href="http://cloudsharper.com/">
-                  <img src="assets/consulting-8.jpg" alt="CloudSharper" />
+                  <img src="/assets/consulting-8.jpg" alt="CloudSharper" />
                 </a>
 								<div class="align-center">
                   <a href="http://cloudsharper.com/">
@@ -135,9 +174,9 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</section>
+
 		<section class="section-base section-color">
 			<div class="container">
 				<div class="timeline">
@@ -175,10 +214,14 @@
 		<section class="section-base">
 			<div class="container">
         <div class="row">
-          <div class="col-lg-6 cnt-box cnt-box-top zoom-on-hover">
-            <img src="assets/trainings-2.jpg" alt="" />
+          <div class="col-lg-6 cnt-box cnt-box-top" data-anima="scale" data-time="1200" data-trigger="hover" >
+            <a href="/contact">
+              <img src="/assets/trainings-2.jpg" alt="" />
+            </a>
             <div class="caption">
-              <h2>Onsite Consulting</h2>
+              <a href="/contact">
+                <h2>Onsite Consulting</h2>
+              </a>
               <ul>
                 <li>Harness transitioning to functional mindset</li>
                 <li>Enjoy the gains of frictionless partnerships</li>
@@ -186,10 +229,14 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-6 cnt-box cnt-box-top zoom-on-hover">
-            <img src="assets/trainings-3.jpg" alt="" />
+          <div class="col-lg-6 cnt-box cnt-box-top" data-anima="scale" data-time="1200" data-trigger="hover" >
+            <a href="/contact">
+              <img src="/assets/trainings-3.jpg" alt="" />
+            </a>
             <div class="caption">
-              <h2>Online Consulting</h2>
+              <a href="/contact">
+                <h2>Online Consulting</h2>
+              </a>
               <ul>
                 <li>When recorded meetings matter</li>
                 <li>Seamless connection with distant partners</li>
@@ -201,21 +248,20 @@
       </div>
 		</section>
 	</main>
+
 	<!-- FOOTER -->
 	<footer class="footer light">
 		<div ws-replace="Footer"></div>
 		<div class="bottom" ws-replace="Cookie"></div>
 		<link async rel="stylesheet" href="/themekit/media/icons/fontawesome/icons.css">
-		<script src="themekit/scripts/contact-form/contact-form.js"></script>
-		<script src="themekit/scripts/tab-accordion.js"></script>
-		<script src="themekit/scripts/maps.min.js"></script>
-		<script src="themekit/scripts/contact-form/contact-form.js"></script>
-		<script src="themekit/scripts/progress.js"></script>
-		<script src="themekit/scripts/glide.min.js"></script>
-		<script src="themekit/scripts/magnific-popup.min.js"></script>
-		<script src="themekit/scripts/imagesloaded.min.js"></script>
-		<script src="themekit/scripts/parallax.min.js"></script>
-		<script src="media/custom.js"></script>
+		<script src="/themekit/scripts/contact-form/contact-form.js"></script>
+		<script src="/themekit/scripts/tab-accordion.js"></script>
+		<script src="/themekit/scripts/maps.min.js"></script>
+		<script src="/themekit/scripts/contact-form/contact-form.js"></script>
+		<script src="/themekit/scripts/glide.min.js"></script>
+		<script src="/themekit/scripts/magnific-popup.min.js"></script>
+		<script src="/themekit/scripts/imagesloaded.min.js"></script>
+		<script src="/themekit/scripts/parallax.min.js"></script>
 		<script src="/js/Client${ReleaseMin}.js"></script>
 	</footer>
 	<script ws-replace="scripts"></script>
