--- a/src/Hosted/index.html
+++ b/src/Hosted/index.html
@@ -19,6 +19,7 @@
   <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
   <script ws-replace="Head"></script>
   <script src="/themekit/scripts/main.js"></script>
+  <script src="/themekit/scripts/progress.js"></script>
 </head>
 <body>
   <div id="preloader"></div>
@@ -276,7 +277,6 @@
       <script src="/themekit/scripts/pagination.min.js"></script>
       <script src="/themekit/scripts/social.min.js"></script>
       <script src="/themekit/scripts/tab-accordion.js"></script>
-      <script src="/media/custom.js"></script>
       <script src="/js/Client${ReleaseMin}.js"></script>
       <script ws-replace="scripts"></script>
       <script src="//unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
