--- a/src/Hosted/trainings/fsharp-basics.html
+++ b/src/Hosted/trainings/fsharp-basics.html
@@ -48,10 +48,13 @@
               <br/>
               <p>With us, you can quickly learn to use F# in real-world, complex projects.</p>
             </div>
-            <div class="col-lg-6 zoom-on-hover">
+            <div class="col-lg-6">
               <img
                 style="display: block; margin: 0 auto"
                 src="/assets/fsharp-training-1.jpg"
+                data-anima="scale"
+                data-time="1200"
+                data-trigger="hover"
               />
             </div>
           </div>
@@ -60,10 +63,13 @@
       <section class="section-base section-color">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 zoom-on-hover">
+            <div class="col-lg-6">
               <img
                 class="margin-23 margin-md-23"
                 src="/assets/003.jpg"
+                data-anima="scale"
+                data-time="1200"
+                data-trigger="hover"
               />
             </div>
             <div class="col-lg-6">
