#9 h2 fix. Faster counter.

--- a/src/Hosted/consulting.html
+++ b/src/Hosted/consulting.html
@@ -126,7 +126,7 @@
                 <div>
                   <h3>F# source repositories</h3>
                   <div class="value text-lg">
-                    <span data-to="400" data-speed="4000">400</span>
+                    <span data-to="400" data-speed="1500">400</span>
                     <span>+</span>
                   </div>
                 </div>
@@ -137,7 +137,7 @@
                 <div>
                   <h3>F# enterprise applications built</h3>
                   <div class="value text-lg">
-                    <span data-to="30" data-speed="3000">30</span>
+                    <span data-to="30" data-speed="1500">30</span>
                     <span>+</span>
                   </div>
                 </div>
@@ -208,7 +208,6 @@
             <div>
               <div class="badge">
                 <p>Faster development</p>
-                <span></span>
               </div>
               <div class="panel">
                 <h3 class="timeline-title">Fast development, less code</h3>
@@ -218,7 +217,6 @@
             <div>
               <div class="badge">
                 <p>Business value</p>
-                <span></span>
               </div>
               <div class="panel">
                 <h3 class="timeline-title">Business value created</h3>
@@ -231,7 +229,6 @@
             <div>
               <div class="badge">
                 <p>TTM</p>
-                <span></span>
               </div>
               <div class="panel">
                 <h3 class="timeline-title">Shorter Time To Market</h3>
@@ -279,7 +276,7 @@
               </a>
               <div class="caption">
                 <a href="/contact">
-                  <h2">Online Consulting</h2>
+                  <h2>Online Consulting</h2>
                 </a>
                 <ul>
                   <li>When recorded meetings matter</li>
