--- a/src/Hosted/consulting.html
+++ b/src/Hosted/consulting.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Consulting</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Available consulting offerings from IntelliFactory">
+    <meta property="og:title" content="Consulting" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://intellifactory.com/consulting" />
+    <meta property="og:image" content="/assets/if_logo.png" />
+    <meta property="og:description" content="Available consulting offerings from IntelliFactory" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@intellifactory" />
+    <meta name="twitter:title" content="Consulting" />
+    <meta name="twitter:description" content="Available consulting offerings from IntelliFactory" />
     <script src="/themekit/scripts/jquery.min.js"></script>
     <script src="/themekit/scripts/main.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
