--- a/src/Hosted/trainings.html
+++ b/src/Hosted/trainings.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Trainings</title>
-    <meta name="description" content="">
+    <meta name="description" content="Available training offerings by IntelliFactory">
+    <meta property="og:title" content="Trainings" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://intellifactory.com/trainings" />
+    <meta property="og:image" content="/assets/if_logo.png" />
+    <meta property="og:description" content="Available training offerings by IntelliFactory" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@intellifactory" />
+    <meta name="twitter:title" content="Trainings" />
+    <meta name="twitter:description" content="Available training offerings by IntelliFactory" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <script src="/themekit/scripts/jquery.min.js"></script>
