--- a/src/Hosted/contact.html
+++ b/src/Hosted/contact.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact</title>
-    <meta name="description" content="">
+    <meta name="description" content="Contact us at IntelliFactory">
+    <meta property="og:title" content="Contact us" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://intellifactory.com/contact" />
+    <meta property="og:image" content="/assets/if_logo.png" />
+    <meta property="og:description" content="Contact us at IntelliFactory" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@intellifactory" />
+    <meta name="twitter:title" content="Contact us" />
+    <meta name="twitter:description" content="Contact us at IntelliFactory" />
     <script src="themekit/scripts/jquery.min.js"></script>
     <script src="themekit/scripts/main.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
