--- a/src/Hosted/research.html
+++ b/src/Hosted/research.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Research</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Research">
+    <meta property="og:title" content="Research" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://intellifactory.com/research" />
+    <meta property="og:image" content="/assets/if_logo.png" />
+    <meta property="og:description" content="Research" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@intellifactory" />
+    <meta name="twitter:title" content="Research" />
+    <meta name="twitter:description" content="Research" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <script src="themekit/scripts/jquery.min.js"></script>
