--- a/src/Hosted/trainings/fsharp-basics.html
+++ b/src/Hosted/trainings/fsharp-basics.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>F# basics training</title>
-    <meta name="description" content="" />
+    <meta name="description" content="F# basics training offered by IntelliFactory">
+    <meta property="og:title" content="F# basics training" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://intellifactory.com/course/fsharp-basics" />
+    <meta property="og:image" content="/assets/if_logo.png" />
+    <meta property="og:description" content="F# basics training offered by IntelliFactory" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@intellifactory" />
+    <meta name="twitter:title" content="F# basics training" />
+    <meta name="twitter:description" content="F# basics training offered by IntelliFactory" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
