Fixed date format and tweaked style on the blog pages.

--- a/src/Hosted/blogpost.html
+++ b/src/Hosted/blogpost.html
@@ -46,9 +46,10 @@
                     <div class="col-lg-9 text-color">
                         <div class="blog-meta-icon">
                             <div><i class="fas fa-calendar-alt"></i><span class="blog-meta-date">${Date}</span></div>
-                            <div><i class="fas fa-user-alt"></i><a href="${AuthorUrl}">${AuthorName}</a></div>
-                            <div><i class="fas fa-clock"></i><span>Read Time: ${TimeToRead} min</span></div>
+                            <div style="margin-left:0.5em;"><i class="fas fa-user-alt"></i><a href="${AuthorUrl}">${AuthorName}</a></div>
+                            <div style="margin-left:0.5em;"><i class="fas fa-clock"></i><span>Read Time: ${TimeToRead} min</span></div>
                         </div>
+                        <hr style="margin: 0 0 1.5em" />
                         <div ws-hole="Article"></div>
                         <hr class="space" />
                         <div class="icon-links icon-links-button full-width icon-social social-colors">
