Added time to read section

--- a/src/Hosted/blogpost.html
+++ b/src/Hosted/blogpost.html
@@ -47,6 +47,7 @@
                         <div class="blog-meta-icon">
                             <div><i class="fas fa-calendar-alt"></i><span class="blog-meta-date">${Date}</span></div>
                             <div><i class="fas fa-user-alt"></i><a href="${AuthorUrl}">${AuthorName}</a></div>
+                            <div><i class="fas fa-clock"></i><span>Read Time: ${TimeToRead} min</span></div>
                         </div>
                         <div ws-hole="Article"></div>
                         <hr class="space" />
