Fix issue with blog tags visual

--- a/src/Hosted/bloglist.html
+++ b/src/Hosted/bloglist.html
@@ -129,7 +129,7 @@
             <div ws-replace="Topics" ws-children-template="TopicsBody">
               <h2>Topics</h2>
               <hr class="space-sm" />
-              <div class="tabs">
+              <div class="tabs tabs-without-count">
                 <div ws-replace="Topics" ws-children-template="TopicWithCount">
                   <div><a href="${Link}">${Topic} x ${Count}</a></div>
                 </div>
